# wifi-ml-complete

./: README  add_columns.py  clean_data_idem.sh  compare_loss.sh  complete_model.ipynb  loss_rate.awk  merge.awk  pyproject.toml  swap.sh
.ipynb_checkpoints/: complete_model-checkpoint.ipynb
1H/: fan_10_1.csv  fan_10_2.csv  fan_10_3.csv  fan_13_1.csv  fan_13_2.csv  fan_13_3.csv  fan_14_1.csv  fan_14_2.csv  fan_14_3.csv  fan_15_1.csv  fan_15_2.csv  fan_15_3.csv  fan_17_1.csv  fan_17_2.csv  fan_17_3.csv  fan_4_1.csv  fan_4_2.csv  fan_4_3.csv  fan_5_1.csv  fan_5_2.csv  fan_5_3.csv  fan_7_1.csv  fan_7_2.csv  fan_7_3.csv  fan_8_1.csv  fan_8_2.csv  fan_8_3.csv  fan_9_1.csv  fan_9_2.csv  fan_9_3.csv  horizontal_10_1.csv  horizontal_10_2.csv  horizontal_10_3.csv  horizontal_11_1.csv  horizontal_11_2.csv  horizontal_11_3.csv  horizontal_13_1.csv  horizontal_13_2.csv  horizontal_13_3.csv  horizontal_14_1.csv  (+65 more)
1H_obstacle/: complete_data.csv  vertical_1_1.csv  vertical_1_2.csv  vertical_1_3.csv  vertical_2_1.csv  vertical_2_2.csv  vertical_2_3.csv  vertical_3_1.csv  vertical_3_2.csv  vertical_3_3.csv  vertical_4_1.csv  vertical_4_2.csv  vertical_4_3.csv  vertical_5_1.csv  vertical_5_2.csv  vertical_5_3.csv
2nd/: fan_0_1.csv  fan_0_2.csv  fan_0_3.csv  fan_10_1.csv  fan_10_2.csv  fan_10_3.csv  fan_11_1.csv  fan_11_2.csv  fan_11_3.csv  fan_12_1.csv  fan_12_2.csv  fan_12_3.csv  fan_13_1.csv  fan_13_2.csv  fan_13_3.csv  fan_14_1.csv  fan_14_2.csv  fan_14_3.csv  fan_15_1.csv  fan_15_2.csv  fan_15_3.csv  fan_16_1.csv  fan_16_2.csv  fan_16_3.csv  fan_1_1.csv  fan_1_2.csv  fan_1_3.csv  (+180 more)
(+483 files in other folders)
